# azemauto

./: .gitignore
ros2_ws/: README.md  pc_env.sh  pi_env.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/scripts/: setup_geographiclib.sh
ros2_ws/src/my_robot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_bridge/my_robot_bridge/: __init__.py  auto_arm_disarm_node.py  cmd_vel_to_manual_control_node.py  cmd_vel_to_mavros_node.py  cmd_vel_to_rc_override_node.py  mavros_bridge_node.py  (+1 more)
ros2_ws/src/my_robot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_bringup/behavior_trees/: navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
ros2_ws/src/my_robot_bringup/config/future/nav2/: nav2_params_template.yaml
ros2_ws/src/my_robot_bringup/config/future/robot_localization/: ekf_template.yaml  navsat_transform_template.yaml
ros2_ws/src/my_robot_bringup/config/lidar/: rplidar_a2.yaml
ros2_ws/src/my_robot_bringup/config/localization/: amcl_localization.yaml  slam_toolbox_localization_posegraph_template.yaml
ros2_ws/src/my_robot_bringup/config/mapping/: depth_to_scan.yaml  slam_toolbox_mapping.yaml
ros2_ws/src/my_robot_bringup/config/mavros/: mavros_params.yaml
ros2_ws/src/my_robot_bringup/config/nav2/: nav2_ackermann.yaml
ros2_ws/src/my_robot_bringup/config/network/: cyclonedds.xml
ros2_ws/src/my_robot_bringup/config/realsense/: realsense_d435.yaml
ros2_ws/src/my_robot_bringup/config/safety/: auto_arm_disarm.yaml
ros2_ws/src/my_robot_bringup/config/teleop/: cmd_vel_to_manual_control.yaml  cmd_vel_to_mavros.yaml  cmd_vel_to_rc_override.yaml  xbox_teleop.yaml
ros2_ws/src/my_robot_bringup/launch/: future_localization.launch.py  pc_localization.launch.py  pc_mapping.launch.py  pc_nav2.launch.py  pc_teleop_joy.launch.py  pc_visualization.launch.py  pi_bringup.launch.py  pi_mapping.launch.py
ros2_ws/src/my_robot_bringup/my_robot_bringup/: __init__.py
ros2_ws/src/my_robot_description/: CMakeLists.txt
ros2_ws/src/my_robot_rviz/: CMakeLists.txt  package.xml
(+82 files in other folders)
